--- a/ars-reservation/ars-reservation-service/.settings/org.eclipse.wst.common.component
+++ b/ars-reservation/ars-reservation-service/.settings/org.eclipse.wst.common.component
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="ars-reservation-service">
         <wb-resource deploy-path="/" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/" source-path="/src/main/resources" tag="defaultRootSource"/>
+        <dependent-module archiveName="ars-reservation-api-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ars-reservation-api/ars-reservation-api">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="ars-masterdata-api-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/ars-masterdata-api/ars-masterdata-api">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <property name="java-output-path" value="/ars-reservation-service/target/classes"/>
     </wb-module>
 </project-modules>
