--- a/ars-dist/.settings/org.eclipse.wst.common.component
+++ b/ars-dist/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="ars-ear-0.0.1-SNAPSHOT">
+    <wb-module deploy-name="ars-dist-0.0.1-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/ear-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/application" tag="defaultRootSource"/>
         <dependent-module archiveName="ars-masterdata-api.jar" deploy-path="/lib" handle="module:/resource/ars-masterdata-api/ars-masterdata-api">
