--- a/ars-dist/.settings/org.eclipse.wst.common.component
+++ b/ars-dist/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,9 @@
     <wb-module deploy-name="ars-dist-0.0.1-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/ear-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/application" tag="defaultRootSource"/>
+        <dependent-module archiveName="ars-service-ejb.jar" deploy-path="/" handle="module:/resource/ars-service-ejb/ars-service-ejb">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="ars-masterdata-api.jar" deploy-path="/lib" handle="module:/resource/ars-masterdata-api/ars-masterdata-api">
             <dependency-type>uses</dependency-type>
         </dependent-module>
