--- a/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/fxml/Main.fxml
+++ b/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/fxml/Main.fxml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
 <?import javafx.scene.control.*?>
 
-
-<TabPane xmlns:fx="http://javafx.com/fxml/1" >
+<TabPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.prodyna.pac.ars.frontend.fxml.MainController" >
     <tabs>
         <Tab text="Aircraft Types" closable="false">
             <content>
@@ -17,7 +15,9 @@
             </content>
         </Tab>
         <Tab text="User" closable="false">
-        
+            <content>
+                <fx:include fx:id="user" source="User.fxml"/>
+            </content>
         </Tab>
     </tabs>
 </TabPane>
