--- a/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/fxml/User.fxml
+++ b/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/fxml/User.fxml
@@ -17,7 +17,7 @@
                       <PropertyValueFactory property="name" />
                   </cellValueFactory>
               </TableColumn>
-              <TableColumn text="Name" prefWidth="100">
+              <TableColumn text="eMail" prefWidth="100">
                   <cellValueFactory>
                       <PropertyValueFactory property="email" />
                   </cellValueFactory>
