--- a/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/fxml/AircraftType.fxml
+++ b/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/fxml/AircraftType.fxml
@@ -8,8 +8,8 @@
 <?import javafx.scene.text.*?>
 
 <VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" id="ACTAnchorPane" fx:controller="com.prodyna.pac.ars.frontend.fxml.AircraftTypeController" >
-    <Label text="Aircaft Type Management"/>
-    <Button onAction="#showCreateForm" text="New Aircraft Type"/> 
+    <Label styleClass="title" text="Aircraft Type Management"/>
+     
     <TableView fx:id="entryTable">
         <columns>
               <TableColumn text="Name" prefWidth="100">
@@ -19,5 +19,5 @@
               </TableColumn>
           </columns>
     </TableView>
-    
+    <Button onAction="#showCreateForm" text="New Aircraft Type"/>
 </VBox>
