--- a/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/fxml/LicenseForm.fxml
+++ b/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/fxml/LicenseForm.fxml
@@ -6,11 +6,15 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.control.cell.*?>
 <?import javafx.scene.text.*?>
+<?import java.net.URL?>
 
 <GridPane 
     xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10" fx:controller="com.prodyna.pac.ars.frontend.fxml.LicenseFormController">
+        <stylesheets>
+            <URL value="@../css/Main.css" />
+        </stylesheets>
         <padding>
-            <Insets top="25" right="25" bottom="10" left="25"/>
+            <Insets top="15" right="25" bottom="10" left="25"/>
         </padding>
     
         <Text text="Create New" 
@@ -29,7 +33,7 @@
         <Label text="Valid Until:" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
         <DatePicker fx:id="validUntilPicker" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
         
-        <Button fx:id="deleteButton" GridPane.columnIndex="0" GridPane.rowIndex="5" text="DELETE" onAction="#removeUserAircraftTypeLicense"/>
+        <Button fx:id="deleteButton" styleClass="deleteBtn" GridPane.columnIndex="0" GridPane.rowIndex="5" text="DELETE" onAction="#removeUserAircraftTypeLicense"/>
         <Button GridPane.columnIndex="1" GridPane.rowIndex="5" text="OK" onAction="#submitUserAircraftTypeLicense"/>
         
 </GridPane>
