--- a/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/fxml/AircraftType.fxml
+++ b/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/fxml/AircraftType.fxml
@@ -24,5 +24,9 @@
               </TableColumn>
           </columns>
     </TableView>
-    <Button onAction="#showCreateForm" text="%action_new-aircrafttype" visible="${permissionChecker.admin}"/>
+    
+    <HBox>
+        <Button onAction="#showCreateForm" text="%action_new-aircrafttype" visible="${permissionChecker.admin}"/>
+        <Button onAction="#reload" text="%action_reload" /> 
+    </HBox>
 </VBox>
