--- a/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/fxml/User.fxml
+++ b/ars-frontend/src/main/resources/com/prodyna/pac/ars/frontend/fxml/User.fxml
@@ -29,5 +29,8 @@
           </columns>
     </TableView>
     
-    <Button onAction="#showCreateForm" text="New User" visible="${permissionChecker.admin}"/>
+    <HBox>
+        <Button onAction="#showCreateForm" text="New User" visible="${permissionChecker.admin}"/>
+        <Button onAction="#reload" text="%action_reload" /> 
+    </HBox>
 </VBox>
